[fix]: change z-index of map

--- a/src/components/AddPlaces/style.scss
+++ b/src/components/AddPlaces/style.scss
@@ -62,6 +62,7 @@
     &__map {
       margin-right: auto;
       margin-left: 10px;
+      z-index: 0;
     }
     @media (max-width: 900px) {
       flex-direction: column;
